text version of game, gipang-comment out nako ang GUI stuff, wa na testingan ang game kay naay usa ka GUI file sigeg samok samok;